# tale-of-nexus

./: .gitignore  README.md  netlify.toml  package.json
api/: pyproject.toml
api/app/: main.py
netlify/functions/: faucet.mts  mint-badge.mts  oauth-callback.mts  oauth-start.mts  x-proxy.mts
scripts/: deploy-token.js  package.json  register-token-metadata.js
site/: app.js  index.html  nexus-token.json  package.json  server.js  style.css  wallet.js
site/badges/: bronze.json  gold.json  silver.json
