[project]
name = "rialo-x-proxy"
version = "0.1.0"
description = "TweetAPI proxy with multi-key rotation for Rialo Nexus"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
